# tt-metal

./: .gitmodules  CMakeLists.txt  conftest.py  download_coco.py  stats.py
.github/: CODEOWNERS
.github/workflows/: blackhole-demo-tests-impl.yaml  blackhole-demo-tests.yaml  blackhole-post-commit.yaml  pipeline-select-galaxy.yaml  pr-gate.yaml  smoke.yaml  tg-nightly-tests-impl.yaml  tg-quick.yaml  upstream-tests.yaml
dockerfile/: Dockerfile.basic-dev
docs/: Doxyfile
models/demos/llama3_subdevices/demo/: demo_decode.py  text_demo.py
models/demos/llama3_subdevices/tests/: decoder_perf_targets_4u.json  test_decoder_device_perf.py  test_llama_accuracy.py  test_llama_model.py  test_llama_model_nd.py
models/demos/llama3_subdevices/tt/: llama_ccl.py
models/demos/qwen25_vl/demo/: demo.py
models/demos/yolov8s/demo/: demo.py  demo_utils.py
models/demos/yolov8s/tests/: yolov8s_e2e_performant.py
models/demos/yolov8s/tt/: ttnn_yolov8s.py
models/demos/yolov9c/: README.md
models/demos/yolov9c/demo/: demo.py  demo_performant.py  demo_seg_utils.py  demo_utils.py
models/demos/yolov9c/reference/: yolov9c.py
models/demos/yolov9c/runner/: performant_runner.py  performant_runner_infra.py
models/demos/yolov9c/tt/: ttnn_yolov9c.py
models/experimental/DETR3D/reference/: DETR3D_model.py  model_config.py
models/experimental/DETR3D/tests/: test_model3detr.py
models/experimental/detr3d/reference/: detr3d_model.py  model_utils.py
models/experimental/detr3d/tests/: test_generic_mlp.py  test_model3detr.py
models/experimental/detr3d/ttnn/: common.py  ttnn_generic_mlp.py
models/experimental/functional_unet/tt/: unet_shallow_ttnn.py
models/experimental/functional_yolov7/: README.md  ttnn_yolov7_detect.py  ttnn_yolov7_utils.py
models/experimental/functional_yolov7/demo/: yolov7_demo.py
models/experimental/functional_yolov7/reference/: model.py  yolov7_config.py  yolov7_model.py  yolov7_utils.py
models/experimental/functional_yolov7/tt/: common.py  ttnn_yolov7.py
models/experimental/sentence_bert/demo/: demo.py  demo_trace.py
models/experimental/sentence_bert/tests/: test_sentence_bert_e2e_performant.py  test_sentence_bert_perf.py
models/experimental/stable_diffusion_xl_base/: demo.py
models/experimental/stable_diffusion_xl_base/tests/: test_sdxl_accuracy.py
models/experimental/yolo_evaluation/: yolo_common_evaluation.py  yolo_evaluation_utils.py
models/tt_transformers/: PERF.md
models/tt_transformers/demo/: simple_text_demo.py
models/tt_transformers/tt/: mixtral_mlp.py  model.py
plugins/python/: yolov4.py  yolov9.py
tech_reports/ttnn/: graph-tracing.md
tests/scripts/: run_tt_metal.py
tests/sweep_framework/: sweeps_runner.py
tests/tt_metal/distributed/: CMakeLists.txt  test_end_to_end_eltwise.cpp  test_mesh_socket.cpp  test_mpi.cpp
tests/tt_metal/tt_metal/: test_compile_sets_kernel_binaries.cpp
tests/ttnn/: CMakeLists.txt  utils_for_testing.py
tests/ttnn/unit_tests/: test_graph_capture.py  test_sharding.py
tests/ttnn/unit_tests/gtests/: CMakeLists.txt  test_conv2d.cpp  test_conv2d_data_mismatch.cpp  utils.cpp  utils.hpp
tests/ttnn/unit_tests/gtests/ccl/: test_1d_fabric_loopback_latency.cpp  test_fabric_edm.cpp  test_fabric_edm_common.hpp  test_fabric_erisc_data_mover_loopback_with_workers.cpp
tests/ttnn/unit_tests/gtests/ccl/kernels/: erisc_datamover_sender_worker_sender.cpp  fabric_worker_sender_multi_input.cpp
tests/ttnn/unit_tests/gtests/multi_thread/: test_ccl_multi_cq_multi_device.cpp  test_utils.hpp
tests/ttnn/unit_tests/gtests/tensor/: test_distributed_tensor.cpp
tt-train/configs/: training_shakespear_gpt2s.yaml  training_shakespeare_nanollama3.yaml
tt-train/docs/: PROFILING.md
tt-train/notebooks/: profiler_results.ipynb
tt-train/sources/ttml/: CMakeLists.txt
tt-train/tests/model/: linear_regression_ddp_test.cpp  nano_gpt_test.cpp
tt_metal/: CMakeLists.txt  tt_metal.cpp
tt_metal/api/tt-metalium/: buffer.hpp  control_plane.hpp  distributed_host_buffer.hpp  erisc_datamover_builder.hpp  kernel.hpp  mesh_socket.hpp  small_vector.hpp
tt_metal/core_descriptors/: wormhole_b0_80_arch_eth_dispatch.yaml
tt_metal/distributed/: CMakeLists.txt  coordinate_translation.cpp  distributed_host_buffer.cpp  fd_mesh_command_queue.cpp  mesh_buffer.cpp  mesh_socket.cpp  mesh_socket_utils.cpp  mesh_socket_utils.hpp  mesh_workload.cpp  system_mesh.cpp
tt_metal/distributed/flatbuffer/: mesh_socket.fbs
tt_metal/fabric/: CMakeLists.txt  control_plane.cpp  erisc_datamover_builder.cpp  erisc_datamover_builder.hpp  erisc_datamover_builder_helper.hpp  fabric.cpp  fabric_context.cpp  fabric_context.hpp  fabric_edm_types.hpp  fabric_host_utils.cpp  fabric_host_utils.hpp  fabric_mux_config.hpp
tt_metal/hw/: CMakeLists.txt
tt_metal/hw/inc/: circular_buffer_init.h  mod_div_lib.h
tt_metal/impl/: CMakeLists.txt
tt_metal/impl/allocator/: bank_manager.cpp
tt_metal/impl/context/: metal_context.cpp
tt_metal/impl/device/: device_pool.cpp
tt_metal/impl/dispatch/: hardware_command_queue.cpp  ringbuffer_trace_allocator.cpp  ringbuffer_trace_allocator.hpp  system_memory_manager.cpp  topology.cpp
tt_metal/impl/profiler/: profiler.cpp  profiler.hpp  tt_metal_profiler.cpp
tt_metal/impl/program/: dispatch.cpp  program.cpp
tt_metal/include/: compute_kernel_api.h
tt_metal/include/compute_kernel_api/: hw_init.h  matmul.h  reduce.h  tilize.h  transpose_wh.h  transpose_wh_dest.h
tt_metal/jit_build/: build.cpp
tt_metal/llrt/: rtoptions.cpp  tt_cluster.cpp  tt_cluster.hpp
tt_metal/programming_examples/: CMakeLists.txt
tt_metal/programming_examples/add_2_integers_in_compute/: CMakeLists.txt
tt_metal/programming_examples/unicast_swap_2_tensors/: unicast_swap.cpp
tt_stl/tt_stl/: reflection.hpp
ttnn/: CMakeLists.txt
ttnn/api/ttnn/: operation.hpp
ttnn/core/tensor/: serialization.cpp  storage.cpp  tensor.cpp  tensor_attributes.cpp  tensor_impl.cpp  tensor_ops.cpp
ttnn/cpp/ttnn-pybind/: pytensor.cpp  tensor.cpp
ttnn/test/: CMakeLists.txt
ttnn/ttnn/: __init__.py
ttnn/ttnn/operations/: ccl.py
(+261 files in other folders)
